--- a/Index.html
+++ b/Index.html
@@ -107,8 +107,7 @@
 
                 </td>
                 <td>
-                    <input type="button" text="Submit" value="Submit" onclick="submitTask()"
-                        style="font-size: x-large;font-family: 'Courier New', Courier, monospace;font-display:bold ">
+                    <input type="button" text="Submit" value="Submit" onclick="submitTask()" style="font-size: x-large;font-family: 'Courier New', Courier, monospace;font-display:bold ">
                 </td>
             </tr>
             <tr>
@@ -130,8 +129,7 @@
 
                 </td>
                 <td>
-                    <input type="button" text="Sort Priority wise " value="Sort" onclick="SortTask()"
-                        style="font-size: x-large;font-family: 'Courier New', Courier, monospace;font-display:bold ">
+                    <input type="button" text="Sort Priority wise " value="Sort" onclick="SortTask()" style="font-size: x-large;font-family: 'Courier New', Courier, monospace;font-display:bold ">
                 </td>
             </tr>
         </table>
@@ -207,6 +205,7 @@
                 console.log(list1);
             }
             document.body.appendChild(list1);
+        }
         }
     </script>
 </body>
